Finishing, Solve Bug on Oreo and Lollipop

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">Covlin</string>
+    <string name="app_name">Kovlin-19</string>
     <string name="prixa">Artificial Intelligent dari Prixa.ai akan membantu kamu menganalisa gejala Covid</string>
+    <string name="gugus_tugas">2. https://data.covid19.go.id/ : Dukungan API untuk data Covid 19 Indonesia secara Realtime</string>
 </resources>
